# openapi.yaml
@@ -285,169 +285,6 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/User"
-  /coppia:
-    post:
-      x-skaffolder-id: 5e6fe34910a37502b05b1dcc
-      x-skaffolder-name: create
-      x-skaffolder-id-resource: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-resource: coppia
-      x-skaffolder-crudAction: create
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION create
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /
-      x-skaffolder-roles: []
-      summary: CRUD ACTION create
-      tags:
-        - coppia
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/coppia"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-  "/coppia/findBygioca/{key}":
-    get:
-      x-skaffolder-id: 5e6fe41b10a37502b05b1dd4
-      x-skaffolder-name: findBygioca
-      x-skaffolder-id-resource: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-resource: coppia
-      x-skaffolder-crudAction: findBygioca
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION findBygioca
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /findBygioca/{key}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION findBygioca
-      tags:
-        - coppia
-      parameters:
-        - name: key
-          x-skaffolder-type: Objectid
-          in: path
-          description: Id of model to search for
-          required: true
-          schema:
-            type: Objectid
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/coppia"
-  "/coppia/findBygiocano/{key}":
-    get:
-      x-skaffolder-id: 5e6fe41b10a37502b05b1dd6
-      x-skaffolder-name: findBygiocano
-      x-skaffolder-id-resource: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-resource: coppia
-      x-skaffolder-crudAction: findBygiocano
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION findBygiocano
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /findBygiocano/{key}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION findBygiocano
-      tags:
-        - coppia
-      parameters:
-        - name: key
-          x-skaffolder-type: Objectid
-          in: path
-          description: Id of model to search for
-          required: true
-          schema:
-            type: Objectid
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/coppia"
-  "/coppia/{id}":
-    get:
-      x-skaffolder-id: 5e6fe34910a37502b05b1dcd
-      x-skaffolder-name: get
-      x-skaffolder-id-resource: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-resource: coppia
-      x-skaffolder-crudAction: get
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION get
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION get
-      tags:
-        - coppia
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id resource
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/coppia"
-    post:
-      x-skaffolder-id: 5e6fe34910a37502b05b1dce
-      x-skaffolder-name: update
-      x-skaffolder-id-resource: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-resource: coppia
-      x-skaffolder-crudAction: update
-      x-skaffolder-crudType: 
-      x-skaffolder-description: CRUD ACTION update
-      x-skaffolder-returnDesc: 
-      x-skaffolder-returnType: 
-      x-skaffolder-url: /{id}
-      x-skaffolder-roles: []
-      summary: CRUD ACTION update
-      tags:
-        - coppia
-      parameters:
-        - name: id
-          x-skaffolder-type: ObjectId
-          in: path
-          description: Id
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/coppia"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/coppia"
 security:
   - bearerAuth: []
 components:
@@ -500,28 +337,6 @@ components:
         - nome
         - password
         - username
-    coppia:
-      x-skaffolder-id: 5e6fdd3a10a37502b05b1dbd
-      x-skaffolder-id-db: 5e6fda7210a37502b05b1d4e
-      x-skaffolder-id-entity: 5e6fdd3a10a37502b05b1dba
-      x-skaffolder-url: /coppia
-      properties:
-        _id:
-          type: string
-          x-skaffolder-required: true
-      x-skaffolder-relations:
-        gioca:
-          x-skaffolder-id: 5e6fdd3a10a37502b05b1dbb
-          x-skaffolder-type: 1:m
-          x-skaffolder-ent1: 5e6fdd3a10a37502b05b1dba
-          x-skaffolder-ent2: 5e6fda7210a37502b05b1d4f
-        giocano:
-          x-skaffolder-id: 5e6fdd3a10a37502b05b1dbc
-          x-skaffolder-type: 1:m
-          x-skaffolder-ent1: 5e6fdd3a10a37502b05b1dba
-          x-skaffolder-ent2: 5e6fda7210a37502b05b1d4f
-      required:
-        - _id
   x-skaffolder-db:
     - x-skaffolder-id: 5e6fda7210a37502b05b1d4e
       x-skaffolder-name: tesiscroc_db
@@ -535,8 +350,6 @@ components:
         - 5e6fda7210a37502b05b1d5a
         - 5e6fda7210a37502b05b1d5c
         - 5e6fda7210a37502b05b1d61
-        - 5e6fe41b10a37502b05b1dd4
-        - 5e6fe41b10a37502b05b1dd6
       x-skaffolder-nesteds: 
       x-skaffolder-links: 
       x-skaffolder-roles: []
